<resources>
    <string name="app_name">Attendance Checker ver 1.0</string>
    <string name="app_tag">ejeep</string>
    <string name="action_logout">Logout</string>
    <string name="action_sync_user_list">Sync User List</string>
    <string name="action_card_info">Show Card Info</string>
    <string name="action_event_info">Event Info</string>
    <string name="action_show_attendance">Show Attendance</string>
    <string name="action_upload_logs">Upload Transactions</string>
    <string name="action_log_allowance">Set Log Time Allowance</string>
    <string name="action_settings">Settings</string>
    <string name="label_device_id">Device ID:</string>
    <string name="welcome_greeting">Welcome!\nEnjoy your free ride.</string>
    <string name="admin_mode">ON ADMIN MODE</string>
    <string name="total_passengers">Total Passengers:</string>
    <string name="verify_device">Verify This Device</string>
    <string name="sync_user_list">Sync User List</string>
    <string name="card_info">Card Information</string>
    <string name="event_info">Event Information</string>
    <string name="update_events">Update Events</string>
    <string name="card_mcc_number">MCC Number</string>
    <string name="card_name">Name</string>
    <string name="card_birth_date">Birth Date</string>
    <string name="card_issue_date">Issue Date</string>
    <string name="card_expiry_date">Expiry Date</string>
    <string name="please_tap_card">Please tap your card</string>
    <string name="log_time">Log Time Allowance</string>
    <string name="event_selected">Current Selected Event</string>
    <string name="event_log_type">Log Type</string>
    <string name="invalid_card">Your may have an invalid card</string>
    <string name="reading_nfc_success">Reading NFC card successful</string>
</resources>
