<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--<item android:id = "@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>-->
    <item android:id = "@+id/action_sync_user_list"
        android:title="@string/action_sync_user_list"
        android:orderInCategory="101"
        app:showAsAction="never"/>
    <item android:id = "@+id/action_card_info"
        android:title="@string/action_card_info"
        android:orderInCategory="102"
        app:showAsAction="never"/>
    <item android:id = "@+id/action_log_allowance"
        android:title="@string/action_log_allowance"
        android:orderInCategory="102"
        app:showAsAction="never"/>
    <item android:id = "@+id/action_upload_logs"
        android:title="@string/action_upload_logs"
        android:orderInCategory="104"
        app:showAsAction="never"/>
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="105"
        app:showAsAction="never"/>
</menu>