<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/dialog_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_info"
        android:textAlignment="center"
        android:textSize="26sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_mcc_number"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/textView0"/>
    <TextView
        android:id="@+id/tvMCCNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:background="@drawable/rounded_corner_tv_gray"
        android:layout_below="@id/textView1"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_name"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/tvMCCNum"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:background="@drawable/rounded_corner_tv_gray"
        android:layout_below="@id/textView2"/>
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_birth_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/tvName"/>
    <TextView
        android:id="@+id/tvBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:background="@drawable/rounded_corner_tv_gray"
        android:layout_below="@id/textView3"/>
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_issue_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/tvBirthdate"/>
    <TextView
        android:id="@+id/tvIssueDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:background="@drawable/rounded_corner_tv_gray"
        android:layout_below="@id/textView4"/>
    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/card_expiry_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@id/tvIssueDate"/>
    <TextView
        android:id="@+id/tvExpiryDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlue"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"
        android:textSize="26sp"
        android:background="@drawable/rounded_corner_tv_gray"
        android:layout_below="@id/textView5"/>

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="#000000"
        android:textAlignment="center"
        android:layout_below="@id/tvExpiryDate"
        android:text="@string/please_tap_card"
        android:textStyle="bold"/>

</RelativeLayout>